--- a/styles/GuidePage.module.css
+++ b/styles/GuidePage.module.css
@@ -258,3 +258,18 @@
     font-size: 16px;
   }
 }
+.organizer {
+  margin-top: 25px;
+  padding-top: 20px;
+  border-top: 2px solid rgba(0, 16, 77, 0.1);
+  text-align: right;
+  position: relative;
+  z-index: 2;
+}
+
+.organizer p {
+  color: var(--primary-color);
+  font-size: 14px;
+  margin-bottom: 5px;
+  font-weight: 600;
+}
